import java.util.ArrayList;

public class Song {

    //Attributes
    private Title songTitle;
    private ReleaseDate releaseDate;
    private ArrayList<Performer> performers;
    private Label labelName;
    private Writer writer;

    //Constructor
    public Song (Title songTitle, ReleaseDate releaseDate, ArrayList<Performer> performers, Label labelName, Writer writer) {
        this.songTitle = songTitle;
        this.releaseDate = releaseDate;
        this.performers = performers;
        this.labelName = labelName;
        this.writer = writer;
    }

    //Getters

    public Title getSongTitle() {
        return songTitle;
    }

    public ReleaseDate getReleaseDate() {
        return releaseDate;
    }

//    public Performer[] getPerformers() {
//        return performers;
//    }

    public Label getLabel() {
        return labelName;
    }

    public Writer getSongWriter() {
        return writer;
    }

   /* //Method to get the album that the song belongs to
    public Album getAlbum() {
        return album;
    }
    //Method to verify if the song belong to an album
    public boolean songBelongsToAnAlbum() {
        if (album != null){
            return true;
        }
        return false;
    }*/

    //getter for performer
    /* public getPerformer(){
        return new
    } */

    // Method to add performers
    public void addPerformer(Performer performer) {
        this.performers.add(performer);
    }

    // Method to get the performs list
    public ArrayList<Performer> getPerformers() {
        return new ArrayList<>(this.performers);
    }

    // Method to count the number of performers
    public int countPerformers() {
        return this.performers.size();
    }

    //toString
    @Override
    public String toString() {
        return songTitle.toString() + " - " + performers.get(0).toString() + "; " + writer.nameToString() + " (" + releaseDate.getYear() + ")";
    }
}
