// Title class
    public class Title {
        private String title;

        public Title(String title) {
            this.title = title;

        }
        public String getTitle() {
            return this.title;
        }
        public String toString() {
            return title.toString();
        }
}


